# vdm-get

./: README.md  configure.ac  vdm-get.geany
src/: Application.vala  Makefile.am
vapi/: libxml-2.0.vapi
